-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.1.0, Qt Creator 4.2.1, Qt Creator 4.3.0-rc1
-
None
-
Window 7 Professional 64-bit
I just upgraded from Qt Creator 3.6.0 to 4.1.0 and now autocomplete no longer works when typing arguments for a function call. This was not a problem with previous versions of Qt Creator.
For example:
double angle1(1.0), angle2(2.0), result;
angle1 = angle1 + angle2; //autocomplete works here for angle1 and angle2
result = cos(angle1); //autocomplete works for "result" but not "angle1"
Edit: Still an issue in the latest release (4.2.1).
- duplicates
-
QTCREATORBUG-17202 Code completion not triggered after three chars
-
- Closed
-
- is duplicated by
-
QTCREATORBUG-18065 Popup argument function not hidden when typing
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-16934 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
193040,3 | CodeAssist: Fix auto completion if function signature is shown | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |